...
                    isShowingCurrencySelection = true
                } label: {
                    Image(systemName: "plus.circle.fill")
                        .font(.title3)
                        .foregroundColor(.brandPrimary)
                }
                .accessibilityIdentifier("AddCurrencyButton")
            }
        }
        .sheet(isPresented: $isShowingCurrencySelection) {
            CurrencySelectionView(viewModel: viewModel)
        }
        .task {
...
